--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,10 @@
   "name": "co-learn-backend",
   "version": "1.0.0",
   "description": "Backend ExpressJS framework for co-learn",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "backend": "nodemon src/app.js"
   },
   "author": "Tanjimul Bhuiyan",
   "license": "ISC",
@@ -13,6 +14,8 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
+    "socket-io": "^1.0.0",
+    "socket.io": "^2.3.0",
     "sqlite3": "^4.2.0"
   }
 }
