--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "socket.io-client": "^2.3.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-socket.io": "^3.0.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
