added cheat sheet responsive sidebar, added media query support to vue, added a lot of UI elements and funcitonalities as well

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
+    "vue-mq": "^1.0.1",
     "vue-socket.io": "^3.0.9",
     "vue-socket.io-extended": "^4.0.3"
   },
