--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "google-fonts-webpack-plugin": "^0.4.4",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "socket.io": "^2.3.0",
