--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "firebase": "^7.15.4",
     "google-fonts-webpack-plugin": "^0.4.4",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
@@ -18,7 +19,8 @@
     "vue": "^2.6.11",
     "vue-mq": "^1.0.1",
     "vue-router": "^3.3.4",
-    "vue-socket.io-extended": "^4.0.3"
+    "vue-socket.io-extended": "^4.0.3",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
