--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
+    "vue-agile": "^1.1.3",
+    "vue-flickity": "^1.2.1",
     "vue-mq": "^1.0.1",
     "vue-router": "^3.3.4",
     "vue-socket.io-extended": "^4.0.3",
