--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "firebase": "^7.15.4",
+    "firebase-functions": "^3.7.0",
     "google-fonts-webpack-plugin": "^0.4.4",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
