--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue-mq": "^1.0.1",
     "vue-router": "^3.3.4",
     "vue-socket.io-extended": "^4.0.3",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
