--- a/functions/package.json
+++ b/functions/package.json
@@ -12,11 +12,12 @@
     "node": "10"
   },
   "dependencies": {
-    "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase-admin": "^8.10.0",
+    "firebase-functions": "^3.6.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.10",
     "nodemon": "^2.0.4",
     "socket-io": "^1.0.0",
     "socket.io": "^2.3.0",
