--- a/functions/package.json
+++ b/functions/package.json
@@ -19,6 +19,7 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.10",
     "nodemon": "^2.0.4",
+    "random-words": "^1.1.1",
     "socket-io": "^1.0.0",
     "socket.io": "^2.3.0",
     "sqlite3": "^4.2.0"
