--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase-functions": "^3.7.0",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.10",
+    "random-words": "^1.1.1",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-agile": "^1.1.3",
