--- a/functions/package.json
+++ b/functions/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^6.4.10",
     "nodemon": "^2.0.4",
     "random-words": "^1.1.1",
+    "secure-random-string": "^1.1.3",
     "socket-io": "^1.0.0",
     "socket.io": "^2.3.0",
     "sqlite3": "^4.2.0"
