--- a/functions/package.json
+++ b/functions/package.json
@@ -23,7 +23,9 @@
     "secure-random-string": "^1.1.3",
     "socket-io": "^1.0.0",
     "socket.io": "^2.3.0",
-    "sqlite3": "^4.2.0"
+    "sqlite3": "^4.2.0",
+    "superb": "git+https://github.com/th3pi/superb.git",
+    "yes-no-words": "git+https://github.com/th3pi/yes-no-words.git"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
