added session authentication and validation, added joining and creating a session, added some route guards

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemailer": "^6.4.10",
     "random-words": "^1.1.1",
     "sass-loader": "^8.0.2",
+    "superheroes": "^3.0.0",
     "vue": "^2.6.11",
     "vue-agile": "^1.1.3",
     "vue-ellipse-progress": "^1.1.0",
