--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1",
     "mysql": "^2.18.1",
