--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,7 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "serve": "firebase emulators:start --only functions",
+    "serve": "firebase serve -p 5020",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
@@ -17,13 +17,8 @@
     "express-rate-limit": "^5.1.3",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1",
-    "mysql": "^2.18.1",
     "nodemailer": "^6.4.10",
-    "nodemon": "^2.0.4",
     "random-words": "^1.1.1",
-    "secure-random-string": "^1.1.3",
-    "socket-io": "^1.0.0",
-    "socket.io": "^2.3.0",
     "sqlite3": "^4.2.0",
     "superb": "git+https://github.com/th3pi/superb.git",
     "yes-no-words": "git+https://github.com/th3pi/yes-no-words.git"
