--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build && firebase deploy --only hosting",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "vue-ellipse-progress": "^1.1.0",
     "vue-mq": "^1.0.1",
     "vue-router": "^3.3.4",
+    "vuefire": "^2.2.2",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^3.0.1"
   },
