--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "countup.js": "^2.0.5",
     "firebase": "^7.15.4",
+    "firebase-admin": "^8.13.0",
     "firebase-functions": "^3.7.0",
     "node-sass": "^4.14.1",
-    "nodemailer": "^6.4.10",
-    "random-words": "^1.1.1",
     "sass-loader": "^8.0.2",
+    "socket.io-client": "^2.3.0",
+    "sql.js": "^1.3.0",
     "superheroes": "^3.0.0",
     "vue": "^2.6.11",
     "vue-agile": "^1.1.3",
     "vue-ellipse-progress": "^1.1.0",
     "vue-mq": "^1.0.1",
     "vue-router": "^3.3.4",
-    "vuefire": "^2.2.2",
+    "vue-socket.io-extended": "^4.0.3",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^3.0.1"
   },
