--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^7.15.4",
     "firebase-admin": "^8.13.0",
     "firebase-functions": "^3.7.0",
+    "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "socket.io-client": "^2.3.0",
@@ -25,6 +26,8 @@
     "vue-mq": "^1.0.1",
     "vue-router": "^3.3.4",
     "vue-socket.io-extended": "^4.0.3",
+    "vue-sorted-table": "^1.2.0",
+    "vuejs-smart-table": "0.0.5",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^3.0.1"
   },
