--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "socket.io-client": "^2.3.0",
     "sql.js": "^1.3.0",
     "superheroes": "^3.0.0",
+    "v-clipboard": "^2.2.3",
     "vue": "^2.6.11",
     "vue-agile": "^1.1.3",
     "vue-ellipse-progress": "^1.1.0",
+    "vue-js-popover": "^1.2.1",
     "vue-mq": "^1.0.1",
     "vue-router": "^3.3.4",
     "vue-socket.io-extended": "^4.0.3",
