--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-socket.io-extended": "^4.0.3",
     "vue-stripe-menu": "^1.2.11",
     "vue-top-progress": "^0.7.0",
+    "vue2-transitions": "^0.3.0",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^3.0.1"
   },
