--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^7.15.4",
     "firebase-admin": "^8.13.0",
     "firebase-functions": "^3.7.0",
+    "gsap": "^3.4.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "socket.io-client": "^2.3.0",
@@ -23,11 +24,13 @@
     "vue-ellipse-progress": "^1.1.0",
     "vue-js-popover": "^1.2.1",
     "vue-mq": "^1.0.1",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.3.4",
     "vue-socket.io-extended": "^4.0.3",
     "vue-stripe-menu": "^1.2.11",
     "vue-top-progress": "^0.7.0",
     "vue2-transitions": "^0.3.0",
+    "vuesax": "^3.11.17",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^3.0.1"
   },
