--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "v-clipboard": "^2.2.3",
     "vue": "^2.6.11",
     "vue-agile": "^1.1.3",
+    "vue-click-outside": "^1.1.0",
     "vue-ellipse-progress": "^1.1.0",
     "vue-js-popover": "^1.2.1",
     "vue-mq": "^1.0.1",
@@ -29,6 +30,7 @@
     "vue-socket.io-extended": "^4.0.3",
     "vue-stripe-menu": "^1.2.11",
     "vue-top-progress": "^0.7.0",
+    "vue2-touch-events": "^2.2.1",
     "vue2-transitions": "^0.3.0",
     "vuesax": "^3.11.17",
     "vuex": "^3.4.0",
