--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "countup.js": "^2.0.5",
+    "element-ui": "^2.13.2",
     "firebase": "^7.15.4",
     "firebase-admin": "^8.13.0",
     "firebase-functions": "^3.7.0",
@@ -27,9 +28,12 @@
     "vue-mq": "^1.0.1",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.3.4",
+    "vue-scroll-to": "^2.2.1",
     "vue-socket.io-extended": "^4.0.3",
     "vue-stripe-menu": "^1.2.11",
+    "vue-timeago": "^5.1.2",
     "vue-top-progress": "^0.7.0",
+    "vue-virtual-scroller": "^1.0.10",
     "vue2-touch-events": "^2.2.1",
     "vue2-transitions": "^0.3.0",
     "vuesax": "^3.11.17",
