--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "vue-agile": "^1.1.3",
     "vue-click-outside": "^1.1.0",
     "vue-ellipse-progress": "^1.1.0",
+    "vue-highlightjs": "^1.3.3",
     "vue-js-popover": "^1.2.1",
     "vue-mq": "^1.0.1",
     "vue-notification": "^1.3.20",
+    "vue-prismjs": "^1.2.0",
     "vue-router": "^3.3.4",
     "vue-scroll-to": "^2.2.1",
     "vue-socket.io-extended": "^4.0.3",
